<resources>
    <string name="app_name">Feastival</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyC4Ok_DgRWAg1YnU8sMNKWum6bcbuwfvkk
    </string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="loading_map_dialog_title">Notification</string>
    <string name="loading_map_dialog_message">Map is loading, please wait in few minute</string>
    <string name="request_permission_dialog_title">Request access location permission</string>
    <string name="request_permission_dialog_message">We want to access to your location to show
        your current position</string>
    <string name="permission_denied">PERMISSION_DENIED</string>
    <string name="title_remember_me">Remember Me</string>
    <string name="title_login">Login</string>
    <string name="action_forgot_password">Forgot password</string>
    <string name="title_slash">\t/\t</string>
    <string name="title_register">Register</string>
    <string name="title_phone_or_email">Phone or Email</string>
    <string name="title_pass_word">Password</string>
    <string name="content_description">contentDescription</string>
    <string name="title_enter_message">Enter message</string>
    <string name="groups">Groups</string>
    <string name="create_group">Create Group</string>
    <string name="name">Name:</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="email_address">Email Address</string>
    <string name="address">Address:</string>
    <string name="enter_group_address">Enter Group Address</string>
    <string name="time">Time:</string>
    <string name="size">Size:</string>
    <string name="size_group">Number Member</string>
    <string name="category">Category:</string>
    <string name="category_group">Category Group</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="field_name_empty">Field name empty</string>
    <string name="field_address_empty">Field address empty</string>
    <string name="field_time_not_match">Field time not match the format</string>
    <string name="field_time_empty">Field time empty</string>
    <string name="field_size_empty">Field size empty</string>
    <string name="field_size_cant_negative">Field size can\'t negative</string>
    <string name="field_category_empty">Field category empty</string>
    <string name="create_new_group">Create new group</string>
    <string name="create_new_restaurant">Create new restaurant</string>
    <string name="add_more_view_point">Add more view point</string>
    <string name="creating_new_group_state">You are creating new group state</string>
    <string name="double_click_back">Please click BACK again to exit</string>
    <string name="member">Member:</string>
    <string name="creat">Creator:</string>
    <string name="join">Join</string>
    <string name="groupname">Group Name</string>
</resources>
