<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="viewModel"
            type="com.framgia.feastival.screen.main.creategroup.CreateGroupViewModel"/>

        <import type="com.framgia.feastival.screen.main.creategroup.CreateGroupPresenter"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginBottom="@dimen/dp_10"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:contentDescription="@string/content_description"
                android:onClick="@{(view) -> viewModel.changeStateBottomSheet(view)}"
                bind:src="@{viewModel.state}"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginStart="@dimen/dp_10"
                android:gravity="center_vertical"
                android:text="@string/create_group"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_20"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/sp_20"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/enter_group_name"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:padding="@dimen/dp_10"
                        android:text="@={viewModel.name}"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/sp_20"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/border">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_group_address"
                        android:imeOptions="actionDone"
                        android:inputType="textMultiLine"
                        android:maxLines="@integer/max_lines_address"
                        android:padding="@dimen/dp_10"
                        android:text="@={viewModel.address}"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/sp_20"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@{CreateGroupPresenter.timeFormat}"
                        android:imeOptions="actionDone"
                        android:inputType="datetime"
                        android:padding="@dimen/dp_10"
                        android:text="@={viewModel.time}"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/size"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/sp_20"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/size_group"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:padding="@dimen/dp_10"
                        android:text="@={viewModel.size}"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/sp_20"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:minHeight="@dimen/dp_50"
                    android:paddingBottom="@dimen/dp_15"
                    android:paddingTop="@dimen/dp_15"
                    bind:selectedValue="@={viewModel.selectedCategory}"
                    bind:spinnerAdapter="@{viewModel.spinnerAdapter}"
                    >
                </Spinner>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_15"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:onClick="@{() -> viewModel.onCancelClick()}"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/color_red_accent_200"
                android:textSize="@dimen/sp_20"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:gravity="center"
                android:onClick="@{() -> viewModel.onCreateGroup()}"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sp_20"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"/>
    </LinearLayout>
</layout>